--- a/main.css
+++ b/main.css
@@ -1,5 +1,120 @@
-h1{
-    color: red;
+@import url(reset.css);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+ul {
+    list-style: none;
+}
+
+/* header start */
+.max_width {
+    max-width: 1320px;
+    margin: auto;
+}
+.header {
+    border: 2px solid red;
+
+}
+.header .nav_head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.nav_head div {
+    width: 250px;
+}
+.nav_head a {
+    text-decoration: none;
+}
+
+.d-flex {
+    display: flex;
+    align-items: center;
+}
+.d-flex img {
+    margin-right: 10px;
+}
+.d-flex div .brand{
+    display: block;
     font-weight: bold;
+    font-size: 27px;
+    color: #21bf86;
+}
+.d-flex div .slogin {
+    display: block;
+    /* font-weight: 300; */
+    font-size: 12px;
+    color: #21bf86;
+}
+.telephone div {
+    width: 160px;
+    border-bottom: 1px solid darkgray;
+    margin-bottom: 6px;
+}
+.telephone div a {
+    color: #449BE4;
+    font-weight: 600;
+}
+.instruksiya {
+    position: relative;
+    display: block;
+}
+.instruksiya .lichniy {
+    padding: 6px 12px;
+    color: #21bf86;
+    border: 1px solid #21bf86;
+    border-radius: 4px;
+    font-weight: 500;
+}
+.instruksiya .lichniy:hover {
+    color: #fff;
+    background-color: #21bf86;
+}
+
+.instruksiya .instruktor {
     text-align: center;
+    width: 100px;
+    border: none;
+    border-bottom: 1px solid darkgray;
+    margin-left: 30px;
+    font-weight: 600;
+}
+.language p{
+    width: 100px;
+    color: #616E81;
+    font-weight: 500;
+}
+.language ul {
+    width: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+}
+/* header end */
+
+/* container start */
+.container {
+    background-color: #21bf86;
+}    
+.container ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.container ul li {
+    padding: 20px 10px;
+}
+.container ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+}
+.container ul li:hover {
+    background-color: #449BE4;
 }
