--- a/css/main.css
+++ b/css/main.css
@@ -104,40 +104,47 @@ ul {
 .containerr {
     background-color: #21bf86;
 }    
-.containerr ul {
+.containerr div  {
+    width: 100%;
+}
+.containerr div ul {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
+    margin: auto;
 }
 .containerr ul li {
     padding: 20px 10px;
 }
 .containerr ul li:first-child {
+    width: 180px;
     text-align: center;
-    width: 100px;
 }
 .containerr ul li:nth-child(2){
+    width: 250px;
     text-align: center;
-    width: 280px;
+    border-left: 1px solid #4dcc9e;
 }
 .containerr ul li:nth-child(3){
+    width: 230px;
     text-align: center;
-    width: 250px;
+    border-left: 1px solid #4dcc9e;
 }
 .containerr ul li:nth-child(4){
+    width: 360px;
     text-align: center;
-    width: 300px;
+    border-left: 1px solid #4dcc9e;
 }
 .containerr ul li:last-child{
+    width: 214px;
     text-align: center;
-    width: 200px;
+    border-left: 1px solid #4dcc9e;
 }
 .containerr ul li a {
     color: #fff;
     text-decoration: none;
-    font-weight: 700;
+    font-weight: 600;
 }
 .containerr ul li:hover {
     background-color: #449BE4;
 }
+
