--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 @import url(reset.css);
-
+@import url(animate.css);   
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+body {
+    position: relative;
 }
 ul {
     list-style: none;
@@ -11,18 +14,17 @@ ul {
 
 /* header start */
 .max_width {
-    max-width: 1320px;
+    max-width: 1200px;
     margin: auto;
 }
-.header {
-    
-}
+
 .header .nav_head {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-top: 20px;
     padding-bottom: 10px;
+    margin-left: 30px;
 }
 .nav_head div {
     width: 250px;
@@ -32,6 +34,7 @@ ul {
 }
 
 .d-flex {
+    margin-right: 40px;
     display: flex;
     align-items: center;
 }
@@ -61,6 +64,12 @@ ul {
 }
 .telephone div a:hover {
     color: #21bf86;
+}
+.phone1 {
+    margin-right: 10px;
+} 
+.phone2 {
+    margin-right: 50px;
 }
 .instruksiya {
     position: relative;
@@ -147,4 +156,310 @@ ul {
 .containerr ul li:hover {
     background-color: #449BE4;
 }
+/* container end */
 
+/* site-BP start */
+.site-BP {
+    text-align: center;
+}
+@keyframes star {
+    0% {
+        transform: rotateZ(0deg) scale(0, 0);
+    }
+    
+    10% {
+        transform: rotateZ(90deg) scale(1.3, 1.3);
+    }
+    20% {
+        transform: rotateZ(180deg) scale(0, 0);
+    }
+}
+@keyframes goldeffekt {
+    0%, 100% {
+        background-position: 0% 100%;
+    }
+    
+    50% {
+        background-position: 100% 100%;
+    }
+}
+
+.site-BP h1 {
+    position: relative;
+    font-size: 72px;
+    font-weight: 900;
+    color: transparent;
+    text-transform: uppercase;
+    -webkit-background-clip: text;
+    margin-top: 40px;
+    padding-bottom: 40px;
+    background-image: repeating-linear-gradient(165deg, gold 0%, #B78628 5%, gold 10%, #B78628 15%, gold 20%);
+    background-size: 500%;
+    animation: goldeffekt 200s linear infinite;
+    border-bottom: 1px solid darkgray;
+}
+
+
+.site-BP h1 img {
+    position: absolute;
+    filter: blur(2px);
+    transform: scale(0, 0);
+    animation: star 10s linear infinite;
+}
+.site-BP h1 img:nth-child(1) {
+    width: 5%;
+    top: -4px;
+    right: 16%;
+    animation-delay: 2.5s;
+}
+.site-BP h1 img:nth-child(2) {
+    width: 6%;
+    top: -12px;
+    right: 51%;
+}
+.site-BP h1 img:nth-child(3) {
+    width: 4%;
+    top: -5px;
+    right: 80%;
+    animation-delay: 6s;
+}
+
+.main {
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 40px;
+}
+.main h3 {
+    font-weight: 500;
+    font-size: 20px;
+    color: #215C65;
+}
+.main h2 {
+    font-weight: bold;
+    font-size: 30px;
+    color: #215C65;
+    margin: 50px;
+}
+
+/* row */
+.rows{
+    padding-bottom: 40px;
+}
+.rows .cols {
+    width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+    margin-top: 30px;
+}
+.rows .cols div {
+    width: 300px;
+    height: 350px;
+    background-color: #efefef;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .5), inset -5px -5px 5px rgba(0, 0, 0, .5), inset 5px 5px 5px rgba(255, 255, 255, 1);
+}
+/* standart */
+.standart {
+    position: relative;
+}
+.standart h3 {
+    text-transform: uppercase;
+    margin: 30px 0;
+    font-weight: 700;
+    color: blue;
+}
+.standart h4 {
+    background: linear-gradient(to right, #4286f4, #373B44);
+    color: white;
+    font-size: 30px;
+    padding: 30px;
+    font-weight: 600;
+}
+.standart .p1 {
+    font-size: 16px;
+    margin-top: 60px;
+    text-align: left;
+    margin-left: 30px;
+    line-height: 1.4;
+    color: #616E81;
+}
+.standart .p2 {
+    font-size: 16px;
+    line-height: 1.4;
+    color: #616E81;
+    position: absolute;
+    right: 20px;
+    bottom: 60px;
+}
+.standart .p2 span {
+    font-weight: 600;
+    color: blue; 
+}
+/* shopper */
+.shopper {
+    position: relative;
+}
+.shopper h3 {
+    text-transform: uppercase;
+    margin: 30px 0;
+    font-weight: 700;
+    color: red;
+}
+.shopper h4 {
+    background: linear-gradient(to right, #ff0000, #9C281E);
+    color: white;
+    font-size: 30px;
+    padding: 30px;
+    font-weight: 600;
+}
+.shopper .p1 {
+    font-size: 16px;
+    margin-top: 60px;
+    text-align: left;
+    margin-left: 30px;
+    line-height: 1.4;
+    color: #616E81;
+}
+.shopper .p2 {
+    font-size: 16px;
+    line-height: 1.4;
+    color: #616E81;
+    position: absolute;
+    right: 20px;
+    bottom: 60px;
+}
+.shopper .p2 span {
+    font-weight: 600;
+    color: red; 
+}
+/* gold */
+.gold {
+    position: relative;
+}
+.gold h3 {
+    text-transform: uppercase;
+    margin: 30px 0;
+    font-weight: 700;
+    color: gold;
+}
+.gold h4 {
+    background: linear-gradient(to right, gold, #B78628);
+    color: white;
+    font-size: 30px;
+    padding: 30px;
+    font-weight: 600;
+}
+.gold .p1 {
+    font-size: 16px;
+    margin-top: 60px;
+    text-align: left;
+    margin-left: 30px;
+    line-height: 1.4;
+    color: #616E81;
+}
+.gold .p2 {
+    font-size: 16px;
+    line-height: 1.4;
+    color: #616E81;
+    position: absolute;
+    right: 20px;
+    bottom: 60px;
+}
+.gold .p2 span {
+    font-weight: 600;
+    color: gold; 
+}
+/* platinum*/
+.platinum {
+    position: relative;
+}
+.platinum h3 {
+    text-transform: uppercase;
+    margin: 30px 0;
+    font-weight: 700;
+    color: silver;
+}
+.platinum h4 {
+    background: linear-gradient(to right, #AAD2C5, #536976);
+    color: white;
+    font-size: 30px;
+    padding: 30px;
+    font-weight: 600;
+}
+.platinum .p1 {
+    font-size: 16px;
+    margin-top: 60px;
+    text-align: left;
+    margin-left: 30px;
+    line-height: 1.4;
+    color: #616E81;
+}
+.platinum .p2 {
+    font-size: 16px;
+    line-height: 1.4;
+    color: #616E81;
+    position: absolute;
+    right: 20px;
+    bottom: 60px;
+}
+.platinum .p2 span {
+    font-weight: 600;
+    color: silver; 
+}
+/* rows end */
+
+/* example */
+.example {
+    max-width: 1200px;
+}
+.example h2 {
+    font-size: 34px;
+}
+.example .p1 {
+    font-size: 20px;
+    color: #333;
+    text-align: left;
+    text-indent: 30px;
+    padding: 16px 10px;
+}
+.example .p2 {
+    font-size: 20px;
+    color: #333;
+    text-align: left;
+    text-indent: 30px;
+    padding: 16px 10px;
+    background: linear-gradient(to right, rgba(58, 226, 206, 0.1),rgba(58, 226, 206, 0.2));
+    border-left: 2px solid rgba(58, 226, 146);
+}
+/* example end */
+
+/* footer */
+footer {
+    color: #D3D3D3;
+    background: #215c65;
+    border-bottom: 1px solid darkgray;
+}
+footer .background {
+    background: #215C65;
+    border-top: 1px solid darkgray;
+}
+#yazik {
+    color: white;
+}
+/* chats */
+.chat {
+    position: fixed;
+    width: 80px;
+    height: 80px;
+    padding: 22px;
+    border-radius: 50%;
+    right: 30px;
+    bottom: 30px;
+    background: linear-gradient(95deg, rgb(17, 153, 142) 20%, rgb(56, 239, 125) 80%);
+    box-shadow: 0 19px 38px 0 rgba(34,36,43,.3);
+    display: block;
+}
