--- a/greenpost.css
+++ b/greenpost.css
@@ -1,5 +1,5 @@
-@import url(reset.css);
-@import url(animate.css);   
+@import url(css/reset.css);
+@import url(css/animate.css);   
 * {
     padding: 0;
     margin: 0;
