--- a/greenpost.css
+++ b/greenpost.css
@@ -254,3 +254,12 @@ ul {
 /* modal end */
 
 /* container end */
+
+/* main start */
+.main {
+    width: 100%;
+}
+.main .banner img {
+    width: 100%;
+    height: 515px;
+}
