--- a/greenpost.css
+++ b/greenpost.css
@@ -272,7 +272,7 @@ ul {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 70px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 .container-fluid .container {
     position: relative;
@@ -331,4 +331,244 @@ ul {
     color: #fff;
     background-color: #449be4;
     border-color: #449be4;
+}
+
+/* how-it-works start */
+.how-it-works {
+    margin-bottom: 60px;
+    padding-bottom: 10px;
+}
+.how-it-works h2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 34px;
+    color: #215C65;
+    padding-bottom: 20px;
+    padding-bottom: 40px;
+}
+.rows {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.cols {
+    width: 300px;  
+    height: 278px;
+    position: relative;
+    border: 1px solid aqua;
+    padding: 55px 15px 35px 15px;
+    margin: 0px 15px;
+    text-align: center;
+    background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(33, 191, 134, 0.05), rgba(33, 191, 134, 0.05)), #FFFFFF;
+    box-shadow: 0px 9px 46px rgba(42, 5, 89, 0.1);
+    border-radius: 5px;
+}
+.cols h3 {
+    font-weight: 500;
+    font-size: 20px;
+    color: #215C65;
+    margin-top: 14px;
+}
+.cols p a{
+    color: #449BE4;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+.cols .number {
+    position: absolute;
+    left: 10px;
+    top: -15px;
+    font-weight: bold;
+    font-size: 75px;
+    opacity: 0.2;
+    color: #D3D3D3;
+}
+.cols .icon {
+    position: absolute;
+    left: 50%;
+    top: -33px;
+    margin: 0 0 0 -33px;
+    width: 66px;
+    height: 66px;
+    background: #21bf86;
+    border-radius: 50%;
+}
+.cols .icon img {
+    margin-top: 14px;
+    vertical-align: middle;
+}
+/* how-it-works end */
+
+/* tariffs start */
+.tariffs {
+    position: relative;
+    margin-bottom: 100px;
+    background: linear-gradient(95.13deg, #449BE4 7.77%, #34A9BB 50.6%, #21BF86 92.19%);
+    padding-top: 40px;
+    padding-bottom: 40px;
+}.tariffs .tariffs-div {
+    display: flex;
+    position: relative;
+}
+.row1 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px dashed #D3D3D3;
+    border-top-left-radius: 14px;
+    border-bottom-left-radius: 14px;
+    padding-top: 22px;
+    padding-bottom: 22px;
+}
+.row2 {
+    width: 50%;
+    border: 1px dashed #D3D3D3;
+    border-top-right-radius: 14px;
+    border-bottom-right-radius: 14px;
+}
+.row1 .col1 h3 {
+    text-align: center;
+}
+.row1 .col1 ul {
+    display: inline-block;
+    list-style: none;
+    margin: 0;
+    padding: 20px;
+    text-align: left;
+}
+.row1 .col1 ul li {
+    color: #fff;
+    position: relative;
+    margin-bottom: 10px;
+    padding-left: 25px;
+}
+
+/* row-absolite */
+.row-absolute {
+    width: 540px;
+    position: absolute;
+    right: 40px;
+    top: -50px;
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15) !important;
+    border-radius: 4px;
+    background-color: #fff;
+    padding: 16px;
+}
+.row-absolute h3 {
+    text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+    color: #215C65;
+    padding-bottom: 6px;
+}
+/* advantages start */
+.advantages {
+    margin-bottom: 55px;
+}
+.advantages h2 {
+    margin-bottom: 1.5rem;
+    font-weight: bold;
+    font-size: 34px;
+    color: #215C65;
+}
+.advantage-d {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.advantage-d .advantage {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, rgba(33, 191, 134, 0.05), rgba(33, 191, 134, 0.05)), #FFFFFF;
+    border: 1px solid rgba(211, 211, 211, 0.43);
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
+.advantage .icon {
+    display: flex;
+    flex: 0 0 auto;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    background: linear-gradient(180deg, #21BF86 0%, #31DA9D 100%), #21BF86;
+    border-radius: 4px 0px 0px 4px;
+}
+.advantage .text {
+    width: 400px;
+    margin-left: 20px;
+    margin-right: 60px;
+}
+.advantage .text span {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.3;
+    color: #215C65;
+}
+.advantage .text p {
+    color: #616E81;
+}
+
+/* calculate form */
+.calculate {
+    padding: 70px 0;
+    background: #fafbfc;
+}
+.calculate .max_width h2 {
+    margin-bottom: 1.5rem;
+    font-weight: bold;
+    font-size: 34px;
+    color: #215C65;
+}
+.shadow-sm {
+    box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.075) !important;
+}
+.py-4 {
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.075) !important;
+}
+.pl-4 {
+    padding-left: 1.5rem !important;
+    margin-bottom: 4px;
+}
+.ml-n4 {
+    margin-left: -2.4rem !important;
+}
+.mb-3 {
+    color: #616E81;
+}
+.border-lg-left {
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-color: #c2c6ce !important;
+}
+.calculate-text {
+    width: 80%;
+    color: #616E81;
+}
+
+.text-main {
+    color: #215C65;
+}
+#volume-weight-title {
+    cursor: pointer;
+    color: #449BE4;
+    border-bottom: 1px dashed currentColor;
+}
+#volume-weight-title:hover {
+    color: #21bf86;
+}
+.py-4 h1{
+    margin-bottom: 1.5rem;
+    font-weight: bold;
+    font-size: 52px;
+    line-height: 1.3;
+    color: #215C65;
 }
